--- a/sample.html
+++ b/sample.html
@@ -6,6 +6,8 @@
 <body>
 
     <h1>Hello, World!</h1>
+        <h1>Hello, dev!</h1>
+        <h1>Hello, World!</h1>
     <p>This is my first paragraph on this page.</p>
 
 </body>
